Labs/Lab4/servicemesh-traffic/labui_1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labui-v1-0
  labels:
    app: labui
    version: v1-0
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labui
      version: v1-0
  template:
    metadata:
      labels:
        app: labui
        version: v1-0
    spec:
      containers:
      - name: labui
        image: registry.cloud.kt.com/66bisoga/labui:2.0
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: mysecret
      nodeSelector:
        key: worker
