Labs/Lab4/servicemesh-traffic/labui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labui-service
  labels:
    app: labui
  namespace: lab
spec:
  type: ClusterIP
  selector:
    app: labui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
